# footbolski

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  docker-compose.prod.yml  docker-compose.yml  dry_run_split.py  footbolski-db.session.sql
backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_event_ai_reasoning.py  0002_player_attributes.py  0003_registration_guest_rating.py  0004_event_ai_reasoning.py  0005_notifications.py  0006_per_creator_event_date_constraint.py  0007_event_payment_fields.py  0008_event_payment_method.py  0009_event_payment_details.py  0010_active_event_creator_date_unique.py  0011_reminder_audit_and_fk_indexes.py  0012_consent_records.py  0013_messaging_ladder_and_motm.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/agent/: __init__.py  agent_router.py  graph.py  prompts.py  tools.py
backend/app/core/: clock.py  config.py  database.py  seed.py  storage.py
backend/app/models/: __init__.py  action_token.py  consent.py  enums.py  event.py  motm_vote.py  player.py  push_subscription.py  registration.py  reminder.py  system_state.py  team.py  team_player.py  venue.py
backend/app/schemas/: consent.py  event.py  player.py  push.py  registration.py  reminder.py  team.py  venue.py
backend/app/services/: consent_service.py  dev_seed_service.py  event_service.py  invite_service.py  ladder_schedule.py  localised_dates.py  message_delivery.py  message_log.py  message_outcome.py  message_templates.py  (+19 more)
(+110 files in other folders)
