[project]
name = "pitchup-backend"
version = "0.1.0"
description = "FastAPI backend for Pitchup"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "anthropic>=0.50.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.5",
  "greenlet>=3.1.1",
  "miniopy-async>=1.22.1",
  "pydantic>=2.10.2",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.17",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
  "pywebpush>=2.0.0",
  "phonenumbers>=8.13.50",
  "tzdata>=2026.3",
  "httpx>=0.28.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
